fix spacing between article data dropdown and body text

--- a/public/css/reader-view.css
+++ b/public/css/reader-view.css
@@ -101,6 +101,7 @@
 
   .reader-view article .article-data-accordion {
     display: block;
+    margin-bottom: 30px;
   }
 
   .reader-view aside {
